[package]
name = "pantheon-probe"
version = "0.1.3"
description = "Pantheon Probe is a versatile network diagnostics tool designed for measuring latency, packet loss, jitter, and bandwidth."
authors = ["Joseph David <techiejossy@gmail.com>"]
edition = "2021"
repository = "https://github.com/0xTxbi/pantheon-probe"
license = "MIT"


[dependencies]
clap = "2.33.3"
figlet-rs = "0.1.5"
futures = "0.3.29"
indicatif = "0.15"
reqwest = {version = "0.11.22"}
semver = "1.0.20"
tokio = {version = "1.33.0", features =["full"]}
