[package]
name = "pantheon-probe"
version = "0.1.3"
description = "Pantheon Probe is a versatile network diagnostics tool designed for measuring latency, packet loss, jitter, and bandwidth."
authors = ["Joseph David <techiejossy@gmail.com>"]
edition = "2021"
repository = "https://github.com/0xTxbi/pantheon-probe"
license = "MIT"


[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.26.3"
reqwest = { version = "0.11.22" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.33.0", features = ["full"] }
