[package]
name = "pantheon-probe"
version = "0.7.0"
description = "Pantheon Probe is a versatile network diagnostics tool designed for measuring latency, packet loss, jitter, and bandwidth."
authors = ["Joseph David <techiejossy@gmail.com>"]
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/0xTxbi/pantheon-probe"
license = "MIT"


[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
